--- a/UniFiler10/Views/BriefcasePage.xaml
+++ b/UniFiler10/Views/BriefcasePage.xaml
@@ -117,10 +117,12 @@
 						<DataTemplate>
 							<local:DocumentView
 								Caption="{Binding}"
-								IsClickSensitive="False"
+								IsClickSensitive="False"								
 								IsDeleteButtonEnabled="{Binding ElementName=me, Path=VM.IsCanImportExport, Mode=OneWay}"
+								IsImportButtonEnabled="{Binding ElementName=me, Path=VM.IsCanImportExport, Mode=OneWay}"
 								IsSaveButtonEnabled="{Binding ElementName=me, Path=VM.IsCanImportExport, Mode=OneWay}"
 								DeleteClicked="OnDelete_Tapped"
+								ImportClicked="OnImport_Tapped"
 								SaveClicked="OnSave_Tapped"/>
 						</DataTemplate>
 					</ItemsControl.ItemTemplate>
