--- a/UniFiler10/Views/DocumentView.xaml
+++ b/UniFiler10/Views/DocumentView.xaml
@@ -14,12 +14,12 @@
     d:DesignWidth="400"
     Width="{x:Bind WidthAdjusted, Mode=OneWay}" Height="{x:Bind HeightAdjusted, Mode=OneWay}">
 
+	<!--Tapped="OnMainBorder_Tapped"-->
 	<Border x:Name="LayoutRoot"
         Width="{x:Bind WidthAdjusted, Mode=OneWay}" Height="{x:Bind HeightAdjusted, Mode=OneWay}"
         VerticalAlignment="Center" HorizontalAlignment="Center"
 		Background="{StaticResource DiagonalNWSEBrush}"
-		Tapped="OnMainBorder_Tapped"
-        Canvas.ZIndex="100"
+		Canvas.ZIndex="100"
         BorderThickness="0">
 		<!--<Border.Background>
             <LinearGradientBrush EndPoint="0.5,.5" StartPoint="0.5,0">
